<resources>
    <string name="app_name">My Application</string>
    <string name="SalesIcon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_scene_text">Главная</string>
    <string name="logo_of_app_1">Courses</string>
    <string name="logo_of_app_2">App</string>
    <string name="corse_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="date_start_course_java">1 января</string>
    <string name="level_java">Начальный</string>
    <string name="course_desc_pyton">Программа обучения Python – рассчитана на новичков в данной сфере.\n\n Простой синтаксис, множество библиотек под разные задачи и комьюнити делают Python одним из самых популярных языков программирования, который активно используется в data science и машинном обучении, веб-разработке и других областях программирования.</string>
    <string name="course_desc">  Программа обучения Джава – рассчитана на новичков в данной сфере.\n\n   За программу вы изучите построение графических приложений под ПК, разработку веб сайтов на основе Java Spring Boot, изучите построение полноценных Андроид приложений и отлично изучите сам язык Джава!</string>
</resources>